tests/base/invalid/Return_CompileFail_11.whiley
import * from whiley.lang.*

void f(bool z):
    return z
